[GPCAPIM-163]: Initial introduction of the build container to support local development.

--- a/.github/workflows/stage-1-commit.yaml
+++ b/.github/workflows/stage-1-commit.yaml
@@ -1,5 +1,9 @@
 name: "Commit stage"
 
+env:
+  # Temporarily set the IN_BUILD_CONTAINER environment variable so github actions can run targets that would only be available to the container.
+  IN_BUILD_CONTAINER: true
+
 on:
   workflow_call:
     inputs:
@@ -55,6 +59,15 @@ jobs:
           fetch-depth: 0 # Full history is needed to compare branches
       - name: "Check file format"
         uses: ./.github/actions/check-file-format
+  check-python-format:
+    name: "Check Python format"
+    runs-on: ubuntu-latest
+    timeout-minutes: 2
+    steps:
+      - name: "Checkout code"
+        uses: actions/checkout@v5
+      - name: "Check Python format"
+        uses: ./.github/actions/check-python-format
   check-markdown-format:
     name: "Check Markdown format"
     runs-on: ubuntu-latest
