--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,33 @@
     "MD013": false,
     "MD024": { "siblings_only": true },
     "MD033": false
+  },
+  // Enable pylance type checking within vscode.
+  "python.analysis.typeCheckingMode": "standard",
+  // Disable all telemetry.
+  "telemetry.telemetryLevel": "off",
+  "telemetry.feedback.enabled": false,
+  // Github copilot file associations
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "dotenv": false,
+    "ini": false,
+    "json": false,
+    "jsonc": false,
+    "yaml": false,
+    ".crt": false,
+    ".key": false,
+    ".pem": false
+  },
+  // Disable telemetry for pylance and python language server.
+  "pylance.telemetry": false,
+  "python.telemetry.enable": false,
+  "debugpy.telemetry.enable": false,
+  "python.experiments.enabled": false,
+  // Enabling Ruff formatter for python files.
+  "[python]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "charliermarsh.ruff"
   }
 }
