--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/checkout@v5
       - name: "Set CI/CD variables"
         id: variables
-        run: |
+        run: | # Temporarily set the IN_BUILD_CONTAINER environment variable so github actions can run targets that would only be available to the container.
+          export IN_BUILD_CONTAINER=true
           datetime=$(date -u +'%Y-%m-%dT%H:%M:%S%z')
           BUILD_DATETIME=$datetime make version-create-effective-file
           echo "build_datetime_london=$(TZ=Europe/London date --date=$datetime +'%Y-%m-%dT%H:%M:%S%z')" >> $GITHUB_OUTPUT
@@ -56,6 +57,7 @@ jobs:
           fi
       - name: "List variables"
         run: |
+          export IN_BUILD_CONTAINER=true
           export BUILD_DATETIME_LONDON="${{ steps.variables.outputs.build_datetime_london }}"
           export BUILD_DATETIME="${{ steps.variables.outputs.build_datetime }}"
           export BUILD_TIMESTAMP="${{ steps.variables.outputs.build_timestamp }}"
