--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@ scripts/terraform/** linguist-vendored
 scripts/tests/test.mk linguist-vendored
 scripts/init.mk linguist-vendored
 scripts/shellscript-linter.sh linguist-vendored
+
+# Enforce LF line endings for all text files
+* text=auto eol=lf
