[GPCAPIM-189]: Moved hello world endpoint into a container

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,7 +13,10 @@
     "ms-python.vscode-pylance",
     "ms-python.debugpy",
     "ms-python.vscode-python-envs",
-    "alexkrechik.cucumberautocomplete"
+    "alexkrechik.cucumberautocomplete",
+    "ms-python.mypy-type-checker"
   ],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": [
+    "ms-vscode.notepadplusplus-keybindings"
+  ]
 }
