--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -8,7 +8,15 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "flask (>=3.1.2,<4.0.0)"
+    "flask (>=3.1.2,<4.0.0)",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-flask>=1.3.0",
+    "pact-python>=2.0.0",
+    "requests>=2.31.0",
 ]
 
 [tool.poetry]
