--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
   "markdownlint.config": {
-    "MD013": false,
-    "MD024": { "siblings_only": true },
-    "MD033": false
+    "extends": "scripts/config/markdownlint.yaml",
   },
   // Enable pylance type checking within vscode.
   "python.analysis.typeCheckingMode": "standard",
