--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -30,7 +30,8 @@
     "wayou.vscode-todo-highlight",
     "yzane.markdown-pdf",
     "yzhang.dictionary-completion",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "charliermarsh.ruff"
   ],
   "unwantedRecommendations": []
 }
