--- a/scripts/config/pre-commit.yaml
+++ b/scripts/config/pre-commit.yaml
@@ -40,8 +40,8 @@ repos:
     pass_filenames: false
 - repo: local
   hooks:
-  - id: run-ruff
-    name: Run ruff
-    entry: ./scripts/githooks/run-ruff.sh
+  - id: python-linting-and-formatting
+    name: Python linting and formatting
+    entry: ./scripts/githooks/python-lint-and-format.sh
     language: script
     pass_filenames: false
