[GPCAPIM-163]: Added JSON with comments to GitHub Copilot disabled file associations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "dotenv": false,
     "ini": false,
     "json": false,
+    "jsonc": false,
     "yaml": false,
     ".crt": false,
     ".key": false,
