--- a/ruff.toml
+++ b/ruff.toml
@@ -17,5 +17,29 @@ select = [
   # Flake8-bandit
   "S",
   # Flake8-quotes
-  "Q"
+  "Q",
+  # Flake8-self
+  "SLF",
+  # Flake8-2020
+  "YTT",
+  # Flake8-builtins
+  "A",
+  # Flake8-commas
+  "COM",
+  # Flake8-comprehensions
+  "C4",
+  # Flake8-implicit-str-concat
+  "ISC",
+  # Flake8-import-conventions
+  "ICN",
+  # Flake8-datetimez
+  "DTZ",
+  # Flake8-logging
+  "LOG",
+  # Flake8-logging-format
+  "G",
+  # Flake8-pytest-style
+  "PT",
+  # Flake8-type-checking
+  "TC"
 ]
