[GPCAPIM-163]: Updated README.md file to include how to build the repository

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
   // Github copilot file associations
   "github.copilot.enable": {
     "*": true,
+    "plaintext": false,
     "dotenv": false,
     "ini": false,
     "json": false,
