--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
   "python.telemetry.enable": false,
   "debugpy.telemetry.enable": false,
   "python.experiments.enabled": false,
+  // Enabling Ruff formatter for python files.
   "[python]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "charliermarsh.ruff"
