[GPCAPIM-189]: Implemented build target to build the hello-world application.
Also introduced mypy for type-checking and ensured any dev certificates are included within the docker buildkit configuration used within the build container.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,8 @@
     "MD024": { "siblings_only": true },
     "MD033": false
   },
-  // Enable pylance type checking within vscode.
-  "python.analysis.typeCheckingMode": "standard",
+  // Disable pylance type checking within vscode.
+  "python.analysis.typeCheckingMode": "off",
   // Disable all telemetry.
   "telemetry.telemetryLevel": "off",
   "telemetry.feedback.enabled": false,
@@ -31,5 +31,11 @@
   "[python]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "charliermarsh.ruff"
-  }
+  },
+  // Pylance configuration
+  "python.analysis.typeEvaluation.deprecateTypingAliases": true,
+  "python.analysis.showOnlyDirectDependenciesInAutoImport": true,
+  "python.analysis.autoImportCompletions": true,
+  "python.analysis.autoIndent": false,
+  "mypy-type-checker.cwd": "${nearestConfig}"
 }
