--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -17,3 +17,11 @@ packages = [{include = "gateway_api", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "mypy (>=1.18.2,<2.0.0)"
+]
+
+[tool.mypy]
+strict = true
