--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -20,7 +20,8 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "mypy (>=1.18.2,<2.0.0)"
+    "mypy (>=1.18.2,<2.0.0)",
+    "types-flask (>=1.1.6,<2.0.0)"
 ]
 
 [tool.mypy]
