--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -1,26 +1,20 @@
-[project]
+[tool.poetry]
 name = "gateway-api"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "flask (>=3.1.2,<4.0.0)",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.0.0",
-    "pytest-flask>=1.3.0",
-    "pact-python>=2.0.0",
-    "requests>=2.31.0",
-]
-
-[tool.poetry]
 packages = [{include = "gateway_api", from = "src"}]
+
+[tool.poetry.dependencies]
+python = ">=3.13"
+flask = ">=3.1.2,<4.0.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = ">=8.0.0"
+pytest-flask = ">=1.3.0"
+pact-python = ">=2.0.0"
+requests = ">=2.31.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
