--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -15,6 +15,7 @@ pytest = ">=8.0.0"
 pytest-flask = ">=1.3.0"
 pact-python = ">=2.0.0"
 requests = ">=2.31.0"
+behave = "^1.2.6"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
