--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,7 +12,8 @@
     "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-python.debugpy",
-    "ms-python.vscode-python-envs"
+    "ms-python.vscode-python-envs",
+    "alexkrechik.cucumberautocomplete"
   ],
   "unwantedRecommendations": []
 }
