--- a/ruff.toml
+++ b/ruff.toml
@@ -47,5 +47,4 @@ select = [
 ignore =["COM812"]
 # Ignore assert rule in test files to keep test code susinct and easy to read.
 [lint.per-file-ignores]
-"**/tests/*" = ["S101"]
-"**/steps/*" = ["S101"]
+"**/{tests,steps}/*" = ["S101"]
