--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -16,6 +16,7 @@ pytest-flask = ">=1.3.0"
 pact-python = ">=2.0.0"
 requests = ">=2.31.0"
 behave = "^1.2.6"
+schemathesis = "^4.4.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
