--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "gateway_api", from = "src"}]
 
 [tool.poetry.dependencies]
-python = ">=3.13"
+python = ">3.13,<4.0.0"
 flask = ">=3.1.2,<4.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -15,7 +15,7 @@ pytest = ">=8.0.0"
 pytest-flask = ">=1.3.0"
 pact-python = ">=2.0.0"
 requests = ">=2.31.0"
-behave = "^1.2.6"
+behave = "^1.3.3"
 schemathesis = "^4.4.1"
 
 [build-system]
