--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -1,22 +1,28 @@
-[tool.poetry]
+[project]
 name = "gateway-api"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = [
+    {name = "Your Name", email = "you@example.com"}
+]
 readme = "README.md"
+requires-python = ">3.13,<4.0.0"
+dependencies = [
+    "flask>=3.1.2,<4.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-flask>=1.3.0",
+    "pact-python>=2.0.0",
+    "requests>=2.31.0",
+    "behave>=1.3.3",
+    "schemathesis>=4.4.1",
+]
+
+[tool.poetry]
 packages = [{include = "gateway_api", from = "src"}]
-
-[tool.poetry.dependencies]
-python = ">3.13,<4.0.0"
-flask = ">=3.1.2,<4.0.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = ">=8.0.0"
-pytest-flask = ">=1.3.0"
-pact-python = ">=2.0.0"
-requests = ">=2.31.0"
-behave = "^1.3.3"
-schemathesis = "^4.4.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
