--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -3,12 +3,22 @@ name = "gateway-api"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Your Name",email = "you@example.com"}
+    {name = "Your Name", email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">3.13,<4.0.0"
 dependencies = [
-    "flask (>=3.1.2,<4.0.0)"
+    "flask>=3.1.2,<4.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-flask>=1.3.0",
+    "pact-python>=2.0.0",
+    "requests>=2.31.0",
+    "behave>=1.3.3",
+    "schemathesis>=4.4.1",
 ]
 
 [tool.poetry]
