--- a/.github/workflows/stage-1-commit.yaml
+++ b/.github/workflows/stage-1-commit.yaml
@@ -68,6 +68,8 @@ jobs:
         uses: actions/checkout@v6
       - name: "Check Python format"
         uses: ./.github/actions/check-python-format
+        with:
+          python_version: "${{ inputs.python_version }}"
   check-markdown-format:
     name: "Check Markdown format"
     runs-on: ubuntu-latest
