--- a/ruff.toml
+++ b/ruff.toml
@@ -48,3 +48,4 @@ ignore =["COM812"]
 # Ignore assert rule in test files to keep test code susinct and easy to read.
 [lint.per-file-ignores]
 "**/{tests,steps}/*" = ["S101"]
+"**/test_*.py" = ["S101"]
