--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,11 @@
+# SonarCloud configuration
+# Note: sonar.organization, sonar.projectKey, and sonar.python.coverage.reportPaths
+# are set via GitHub Action parameters
+
+sonar.host.url=https://sonarcloud.io
+sonar.qualitygate.wait=true
+sonar.sourceEncoding=UTF-8
+sonar.sources=gateway-api
+sonar.coverage.exclusions=**/tests/**,**/features/**
 # Set Python version for more precise analysis
-sonar.python.version=3.13 # TODO: set this from ENV variable in GPCAPIM-204
+sonar.python.version=3.14
