--- a/.github/actions/check-python-format/action.yaml
+++ b/.github/actions/check-python-format/action.yaml
@@ -1,5 +1,9 @@
 name: "Check Python format"
 description: "Check Python format"
+inputs:
+  python_version:
+    description: "Python version to use"
+    required: true
 runs:
   using: "composite"
   steps:
@@ -7,7 +11,7 @@ runs:
     - name: "Setup Python"
       uses: actions/setup-python@v5
       with:
-        python-version: 3.13.9
+        python-version: ${{ inputs.python_version }}
     - name: "Install Ruff"
       shell: bash
       run: "pip install ruff"
