--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -55,12 +55,7 @@ jobs:
       - name: "Install dependencies"
         run: make dependencies
       - name: "Run unit test suite"
-        run: |
-          cd gateway-api
-          mkdir -p test-artifacts
-          poetry run pytest tests/unit/ -v \
-            --junit-xml=test-artifacts/unit-tests.xml \
-            --html=test-artifacts/unit-tests.html --self-contained-html
+        run: make test-unit
       - name: "Upload unit test results"
         if: always()
         uses: actions/upload-artifact@v4
@@ -92,12 +87,7 @@ jobs:
       - name: "Install dependencies"
         run: make dependencies
       - name: "Run contract tests"
-        run: |
-          cd gateway-api
-          mkdir -p test-artifacts
-          poetry run pytest tests/contract/ -v \
-            --junit-xml=test-artifacts/contract-tests.xml \
-            --html=test-artifacts/contract-tests.html --self-contained-html
+        run: make test-contract
       - name: "Upload contract test results"
         if: always()
         uses: actions/upload-artifact@v4
@@ -129,12 +119,7 @@ jobs:
       - name: "Install dependencies"
         run: make dependencies
       - name: "Run schema validation tests"
-        run: |
-          cd gateway-api
-          mkdir -p test-artifacts
-          poetry run pytest tests/schema/ -v \
-            --junit-xml=test-artifacts/schema-tests.xml \
-            --html=test-artifacts/schema-tests.html --self-contained-html
+        run: make test-schema
       - name: "Upload schema test results"
         if: always()
         uses: actions/upload-artifact@v4
