--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -68,12 +68,14 @@ jobs:
         uses: test-summary/action@v2
         with:
           paths: gateway-api/test-artifacts/unit-tests.xml
-      - name: "Add HTML report link to summary"
+          output: gateway-api/test-artifacts/unit-test-summary.md
+      - name: "Add test summary and HTML report link"
         if: always()
         run: |
-          echo "### 📊 Unit Test HTML Report" >> $GITHUB_STEP_SUMMARY
-          echo "- Download the **unit-test-results** artifact from the Artifacts section below" >> $GITHUB_STEP_SUMMARY
-          echo "- Extract and open \`unit-tests.html\` in your browser for a detailed visual report" >> $GITHUB_STEP_SUMMARY
+          cat gateway-api/test-artifacts/unit-test-summary.md >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📊 Detailed HTML Report" >> $GITHUB_STEP_SUMMARY
+          echo "Download the **unit-test-results** artifact and open \`unit-tests.html\` for an interactive report." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
   test-contract:
@@ -107,12 +109,14 @@ jobs:
         uses: test-summary/action@v2
         with:
           paths: gateway-api/test-artifacts/contract-tests.xml
-      - name: "Add HTML report link to summary"
+          output: gateway-api/test-artifacts/contract-test-summary.md
+      - name: "Add test summary and HTML report link"
         if: always()
         run: |
-          echo "### 📊 Contract Test HTML Report" >> $GITHUB_STEP_SUMMARY
-          echo "- Download the **contract-test-results** artifact from the Artifacts section below" >> $GITHUB_STEP_SUMMARY
-          echo "- Extract and open \`contract-tests.html\` in your browser for a detailed visual report" >> $GITHUB_STEP_SUMMARY
+          cat gateway-api/test-artifacts/contract-test-summary.md >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📊 Detailed HTML Report" >> $GITHUB_STEP_SUMMARY
+          echo "Download the **contract-test-results** artifact and open \`contract-tests.html\` for an interactive report." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
   test-schema:
@@ -146,12 +150,14 @@ jobs:
         uses: test-summary/action@v2
         with:
           paths: gateway-api/test-artifacts/schema-tests.xml
-      - name: "Add HTML report link to summary"
+          output: gateway-api/test-artifacts/schema-test-summary.md
+      - name: "Add test summary and HTML report link"
         if: always()
         run: |
-          echo "### 📊 Schema Test HTML Report" >> $GITHUB_STEP_SUMMARY
-          echo "- Download the **schema-test-results** artifact from the Artifacts section below" >> $GITHUB_STEP_SUMMARY
-          echo "- Extract and open \`schema-tests.html\` in your browser for a detailed visual report" >> $GITHUB_STEP_SUMMARY
+          cat gateway-api/test-artifacts/schema-test-summary.md >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📊 Detailed HTML Report" >> $GITHUB_STEP_SUMMARY
+          echo "Download the **schema-test-results** artifact and open \`schema-tests.html\` for an interactive report." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
   test-integration:
@@ -185,12 +191,14 @@ jobs:
         uses: test-summary/action@v2
         with:
           paths: gateway-api/test-artifacts/TESTS-*.xml
-      - name: "Add HTML report link to summary"
+          output: gateway-api/test-artifacts/integration-test-summary.md
+      - name: "Add test summary"
         if: always()
         run: |
-          echo "### 📊 Integration Test Reports" >> $GITHUB_STEP_SUMMARY
-          echo "- Download the **integration-test-results** artifact from the Artifacts section below" >> $GITHUB_STEP_SUMMARY
-          echo "- Extract to view detailed Behave test reports" >> $GITHUB_STEP_SUMMARY
+          cat gateway-api/test-artifacts/integration-test-summary.md >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📊 Detailed Reports" >> $GITHUB_STEP_SUMMARY
+          echo "Download the **integration-test-results** artifact for detailed Behave reports." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
   test-lint:
