--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -7,32 +7,8 @@ env:
 on:
   workflow_call:
     inputs:
-      build_datetime:
-        description: "Build datetime, set by the CI/CD pipeline workflow"
-        required: true
-        type: string
-      build_timestamp:
-        description: "Build timestamp, set by the CI/CD pipeline workflow"
-        required: true
-        type: string
-      build_epoch:
-        description: "Build epoch, set by the CI/CD pipeline workflow"
-        required: true
-        type: string
-      nodejs_version:
-        description: "Node.js version, set by the CI/CD pipeline workflow"
-        required: true
-        type: string
       python_version:
         description: "Python version, set by the CI/CD pipeline workflow"
-        required: true
-        type: string
-      terraform_version:
-        description: "Terraform version, set by the CI/CD pipeline workflow"
-        required: true
-        type: string
-      version:
-        description: "Version of the software, set by the CI/CD pipeline workflow"
         required: true
         type: string
 
@@ -165,34 +141,48 @@ jobs:
         with:
           paths: gateway-api/test-artifacts/TESTS-*.xml
 
-  test-lint:
-    name: "Linting"
+  merge-test-coverage:
+    name: "Merge test coverage"
+    needs: [test-unit, test-contract, test-schema]
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 2
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v5
-      - name: "Run linting"
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ inputs.python_version }}
+      - name: "Install Poetry"
         run: |
-          make test-lint
-      - name: "Save the linting result"
-        run: |
-          echo "Nothing to save"
-
-  test-coverage:
-    name: "Test coverage"
-    needs: [test-unit]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: "Checkout code"
-        uses: actions/checkout@v5
-      - name: "Run test coverage check"
-        run: |
-          make test-coverage
-      - name: "Save the coverage check result"
-        run: |
-          echo "Nothing to save"
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: "Install dependencies"
+        run: make dependencies
+      - name: "Download unit test coverage"
+        uses: actions/download-artifact@v4
+        with:
+          name: unit-test-results
+          path: gateway-api/test-artifacts/unit/
+      - name: "Download contract test coverage"
+        uses: actions/download-artifact@v4
+        with:
+          name: contract-test-results
+          path: gateway-api/test-artifacts/contract/
+      - name: "Download schema test coverage"
+        uses: actions/download-artifact@v4
+        with:
+          name: schema-test-results
+          path: gateway-api/test-artifacts/schema/
+      - name: "Merge coverage data"
+        run: make test-coverage
+      - name: "Upload combined coverage report"
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: gateway-api/test-artifacts/coverage/html/
+          retention-days: 30
 
   perform-static-analysis:
     name: "Perform static analysis"
