--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -16,6 +16,7 @@ dev = [
     "pytest>=8.0.0",
     "pytest-flask>=1.3.0",
     "pytest-html>=4.0.0",
+    "pytest-cov>=6.0.0",
     "pact-python>=2.0.0",
     "requests>=2.31.0",
     "behave>=1.3.3",
